* Support for dynamic data endpoint configuration in USB slave API by
  Chris Holgate
* Update to uSTL 1.4 by Simon Kallweit
* ADC device driver for AT91 by Christophe Coutand 
* Major update of lwIP stack to v1.3.2 by Simon Kallweit
* Port of uSTL 1.3 by Uwe Kindler
* Port of PDCurses 3.4 by Sergei Gavrikov

*********** eCos 3.0 release ************

* Port to Olimex LPC-L2294-1MB including ethernet and Flash drivers by
  Sergei Gavrikov
* Port to Olimex LPC-E2294 including ethernet and Flash drivers by
  Sergei Gavrikov
* Port to Olimex LPC-H2294 including Flash drivers by Sergei Gavrikov
* Intel Strataflash v2 flash driver contributed by eCosCentric Ltd.
* New Flash API with lots of new goodies.
* ADC device driver for EA2468 OEM board
* ADC device driver for LP24XXX devices.
* Cortex-M Architecture HAL contributed by eCosCentric Ltd.
* STM32 Variant HAL, STM3210E platform HAL, serial device driver,
  on-chip flash driver contributed by eCosCentric Ltd.
* Synthetic target framebuffer device driver contributed by
  eCosCentric Ltd
* Generic framebuffer support contributed by eCosCentric Ltd.
* PATI PC/104+ board from MPL elektronik by Steven Clugston
* Ethernet driver for LPC2xxx by Uwe Kindler.
* Ethernet phy driver for Mircrel KSZ8001 by Uwe Kindler.
* Generic ADC support contributed by eCosCentric Ltd.
* drivers for LPC2xxx on-chip flash, RTC, I2C and SPI from Hans Rosenfeld.
* Port to Embedded Artists LPC2468 OEM board by Uwe Kindler.
* USB serial class driver by Frank Pagliughi.
* FR30 arch, mb91301 variant and skmb91302 platform by Lars Poeschel.
* phyCORE-LPC2294/92 port including flash and CAN by Uwe Kindler.
* AT91 CAN driver by Uwe Kindler.
* AT91 Ethernet device driver for EMAC by John Eigelaar and Andrew Lunn. 
* MMC/SPI driver provided by eCosCentric Ltd.
* USB device driver for Philips D12.
* Port to ATMEL AT91SAM7X by John Eigelaar
* Freescale MAC7100 varient and SIva MACE1 platfrom by Ilija Koco.