@@ -11,7 +11,7 @@
 <!-- =============================================================== -->
 <!-- ####ECOSDOCCOPYRIGHTBEGIN####                                   -->
 <!-- =============================================================== -->
-<!-- Copyright (C) 2008 Free Software Foundation, Inc.               -->
+<!-- Copyright (C) 2008, 2010 Free Software Foundation, Inc.         -->
 <!-- This material may be distributed only subject to the terms      -->
 <!-- and conditions set forth in the Open Publication License, v1.0  -->
 <!-- or later (the latest version is presently available at          -->
@@ -26,6 +26,7 @@
 <!--                                                                 -->
 <!-- Author(s):   Andrew Lunn, Frank Pagliughi                       -->
 <!-- Contact(s):  asl                                                -->
+<!-- Contributor: jld                                                -->
 <!-- Date:        2008/06/18                                         -->
 <!-- Version:     0.01                                               -->
 <!--                                                                 -->
@@ -111,7 +112,9 @@
       <para>
         The <literal>CYGDAT_IO_USB_SLAVE_SERIAL_EP0</literal> must be
         configured with the control end point of the USB
-        device. <literal>CYGDAT_IO_USB_SLAVE_SERIAL_TX_EP</literal>
+        device. When using static endpoint configuration,
+        <literal>CYGPKG_IO_USB_SLAVE_SERIAL_STATIC_EP</literal> must be
+        enabled, <literal>CYGDAT_IO_USB_SLAVE_SERIAL_TX_EP</literal>
         must be configured with the endpoint to be used for
         transmission and  
         <literal>CYGDAT_IO_USB_SLAVE_SERIAL_RX_EP</literal> must be
